# mkOS

./: .gitignore  .projections.json  LICENSE  README.md  crypttab
docs/: index.html  style.css
examples/: desktop.yaml  minimal.json  void-minimal.yml
installer/: Cargo.toml  DISTRO_STATUS.md  example.mkos.toml  manifest.schema.json  packages.toml
installer/dev/: mirror-cache.py  mirror-cache.sh
installer/examples/: gentoo-minimal.yml
installer/scripts/: update-existing-system.sh
installer/src/: apply.rs  audio.rs  chroot.rs  cli.rs  cmd.rs  firewall.rs  install.rs  lib.rs  mirror.rs  network.rs  paths.rs  prompt.rs  rescue.rs  swap.rs  user_services.rs  util.rs
installer/src/boot/: dracut_efistub.rs  mod.rs
installer/src/cli/: config.rs  gpu.rs  mod.rs  prompts.rs
installer/src/commands/: mod.rs  rollback.rs  snapshot.rs  update.rs
installer/src/crypt/: btrfs.rs  luks.rs  mod.rs  snapshot.rs
installer/src/disk/: mod.rs  partition.rs
installer/src/distro/: alpine.rs  artix.rs  devuan.rs  gentoo.rs  mod.rs  packages.rs  slackware.rs  void.rs
installer/src/hooks/: mod.rs  pacman.rs  void.rs
installer/src/init/: mod.rs  openrc.rs  runit.rs  s6.rs  sysvinit.rs
installer/src/install/: config.rs  mod.rs
installer/src/manifest/: mod.rs  schema.rs
installer/src/pkgmgr/: apk.rs  apt.rs  emerge.rs  mod.rs  pacman.rs  slapt_get.rs  xbps.rs
installer/src/templates/hooks/: mkos-rebuild-uki.sh  pacman-uki.hook  void-kernel-hook.sh
installer/src/tui/: mod.rs
installer/src/uki/: mod.rs  secureboot.rs
scripts/: build-dwl.sh  build-iso.sh  install.sh  (+3 more)
(+8 files in other folders)
