[package]
name = "mkos-install"
version = "0.3.0"
edition = "2021"
description = "mkOS installer - Artix-based distro with LUKS2, btrfs, and EFISTUB"

[lib]
name = "mkos"
path = "src/lib.rs"

[[bin]]
name = "mkos-install"
path = "src/bin/install.rs"

[[bin]]
name = "mkos-apply"
path = "src/bin/apply.rs"

[[bin]]
name = "mkos"
path = "src/bin/mkos.rs"

[[bin]]
name = "mkos-rescue"
path = "src/bin/rescue.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# HTTP client (for URL manifests)
ureq = "2"

# Archive handling (for tar manifests)
tar = "0.4"
flate2 = "1"
tempfile = "3"

# Command execution
which = "7"

# Password input
rpassword = "7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID handling (for LUKS/partitions)
uuid = { version = "1", features = ["v4"] }

# Date/time (for snapshot timestamps)
chrono = "0.4"

# Unix utilities (for root check)
nix = { version = "0.29", features = ["user"] }

# Lazy static initialization
once_cell = "1"

[profile.release]
lto = true
strip = true
opt-level = "z"
